# b3-market-data

./: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
api/: api.go
cmd/: api.go  cmd.go  load.go
db/: db.go  postgres.go  postgres_test.go  sql.go  trade.go  trade_summary.go
loader/: loader.go  parser.go  parser_test.go  reader.go
scraper/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
